[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/AmmoAttack.gd" type="Script" id=1]

[node name="AmmoAttack" type="Node"]
script = ExtResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]

[node name="RefillTimer" type="Timer" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="RefillTimer" to="." method="_on_RefillTimer_timeout"]
